# MucOneUp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_REVIEW_REPRODUCIBILITY_PLAN.md  CONTRIBUTING.md  FEATURE_VNTR_FASTQ.md  GITHUB_ISSUE_31_UPDATE.md  IMPLEMENTATION_COMPLETE_ISSUE_30.md  IMPLEMENTATION_PLAN_ISSUE_31.md  IMPLEMENTATION_PLAN_REPRODUCIBILITY.md  ISSUE_31_FINAL_REPORT.md  Makefile  README.md  RELEASE_NOTES_v0.12.0.md  TESTING_RESULTS.md  TEST_DATA_IMPLEMENTATION_PLAN.md  TEST_DATA_IMPLEMENTATION_PLAN_V2.md  config.json  coverage.baseline.json  coverage.baseline.snapshot.json  coverage.json  docker-compose.yml  mkdocs.yml  muc1_twist_v2_random_snps.tsv  mypy.ini  pyproject.toml  sample_info.tsv  setup.cfg  test.basic_stats.json
.github/workflows/: docker.yml  docs.yml  test.yml
.planning/: codebase-review-report.md
.planning/archive/: 2026-03-25-read-source-tracking.md  2026-04-01-codebase-refactoring-design.md  2026-04-01-phase2a-output-contract-orf-consolidation.md  2026-04-01-phase2b-cli-split-typed-options.md  2026-04-01-phase3a-rng-threading-assembly.md  2026-04-02-phase3b-typed-domain-models.md  2026-04-02-phase4a-execution-abstraction.md  2026-04-02-phase4b-assembly-context-temp-fix.md  2026-04-04-amplicon-simulation.md  2026-04-04-path-to-9-design.md  2026-04-04-path-to-9.md  2026-04-04-review-fixes-to-8.md  2026-04-05-ont-amplicon.md  2026-04-06-bugfixes-79-80-81.md  2026-04-06-vntr-coverage-penalty-fix-design.md  2026-04-06-vntr-coverage-penalty-fix.md  codebase-review-report-v2.md  codebase-review-report-v3.md  codebase-review-report.md  remaining-work-v0.37.md
.planning/plans/: 2026-04-01-phase1-stabilize-operability.md  2026-04-04-pipeline-decomposition.md  2026-04-04-systematic-hardening.md
.planning/reports/: 2026-04-06-vntr-downsampling-validation.md
.planning/specs/: 2026-04-01-codebase-refactoring-design.md  2026-04-04-amplicon-simulation-design.md  2026-04-04-pipeline-decomposition-design.md  2026-04-04-systematic-hardening-design.md  2026-04-05-ont-amplicon-design.md
conda/: env_nanosim.yml  env_pacbio.yml  env_wessim.yaml
data/: README.md  agilent_v8_hg38.bam  agilent_v8_hg38.bam.bai  idt_v1.bam  idt_v1_hg38.bam.bai  twist_v2_hg38.bam  twist_v2_hg38.bam.bai
data/bed/: README.md  agilent_v8_muc1_no_vntr_targets.bed  idt_v1_muc1_no_vntr_targets.bed  twist_v2_muc1_no_vntr_targets.bed
data/examples/: README.md
docker/: Dockerfile  README.md  build.sh
docs/: 01_cli_architecture_refactoring.md  02_error_handling_exceptions.md  03_testing_strategy.md  04_type_safety_validation.md  05_code_quality_standards.md  CLI_MODULARIZATION_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  README.md  REFACTOR_SUMMARY.md  index.md
docs/about/: changelog.md  citation.md  license.md
docs/archive/: codebase_review_2025.md  development_setup.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: amplicon-simulation.md  read-source-tracking.md  simulation.md  snapshot-validation.md  toxic-protein-detection.md  vntr-capture-efficiency.md
docs/includes/: abbreviations.md
docs/planning/: 06_click_migration_plan.md  07_batch_processing_analysis.md
docs/reference/: cli.md.disabled  configuration.md  test-datasets.md
docs/stylesheets/: extra.css
helpers/: README.md  bam_anonymizer.py  download_references.py  generate_test_data.py  install_references.py  install_references_config.json  vntr_analyze.py  vntr_database.tsv
muc_one_up/: __init__.py  assembly.py  cli.py  config.py  config_fingerprint.py  distribution.py  exceptions.py  fasta_writer.py  io.py  mutate.py  probabilities.py  provenance.py  read_simulation.py  simulate.py  simulation_statistics.py  snp_integrator.py  toxic_protein_detector.py  translate.py  type_defs.py  validation.py  version.py
muc_one_up/analysis/: __init__.py  snapshot_validator.py  vntr_statistics.py
muc_one_up/bioinformatics/: __init__.py  reference_validation.py  validation.py
muc_one_up/cli/: __init__.py  _common.py  analysis.py  click_main.py  config.py  error_handling.py  haplotypes.py  main.py  mutations.py  options.py  orchestration.py  outputs.py  snps.py  source_tracking_setup.py
muc_one_up/read_simulator/: __init__.py  allelic_balance_analyzer.py  amplicon_common.py  amplicon_pipeline.py  assembly_context.py  command_utils.py  constants.py  fragment_simulation.py  ont_amplicon_pipeline.py  ont_pipeline.py  output_config.py  pacbio_pipeline.py  pcr_bias.py  pipeline.py  pipeline_utils.py  source_tracking.py  utils.py  vntr_efficiency.py
plan/: IMPLEMENTATION_SUMMARY.md  MIGRATION_v2.md  README.md  RELEASE_VERIFICATION_v0.12.0.md  TOOL_VERSION_TRACKING.md  VERSION_TRACKING_INDEX.md  issue_30_deterministic_simulation_implementation_plan.md
plan/archive/: CODEBASE_REVIEW_2025_STATUS.md  codebase_review_2025.md
plan/completed/: issue_18_docker_containerization.md  (+1 more)
scripts/: capture_coverage_baseline.sh  check_coverage_ratchet.py  dismiss_trivy_alerts.sh  generate_test_data.py
tests/: __init__.py  analyze_dupc_mutation.py  conftest.py  test_assembly.py  test_bam_to_fastq_conversion.py  test_bed.py  test_bioinformatics_validation.py  test_cli.py  test_cli_analysis.py  test_cli_error_handling.py  test_cli_main.py  test_cli_module_structure.py  test_cli_mutations.py  test_cli_orchestration.py  test_cli_outputs.py  test_cli_smoke.py  test_cli_snps.py  test_click_cli.py  test_click_snapshot_validate.py  test_click_vntr_stats.py  test_common_utils.py  test_config.py  test_config_boundary.py  test_config_fingerprint.py  test_config_fingerprint_import.py  test_config_path_resolution.py  test_diploid_handler.py  test_distribution.py  test_domain_models.py  test_exceptions.py  test_fasta_writer.py  test_fastq_utils.py  test_generate_output_base.py  test_io.py  test_lazy_imports.py  test_mutate.py  test_orf_analysis_consolidation.py  test_parsers.py  test_probabilities.py  test_provenance.py  (+20 more)
(+170 files in other folders)
