[metadata]
name = muc_one_up
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = "MucOneUp: a tool to simulate MUC1 VNTR diploid references"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/your-username/muc_one_up"
license = "MIT"

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # Add required dependencies here, e.g.
    # numpy
    # Or leave blank if none

[options.entry_points]
console_scripts =
    muconeup = muc_one_up.cli:main
