[metadata]
name = muc_one_up
version = attr: muc_one_up.__version__
author = Bernt Popp
author_email = bernt.popp.md@gmail.com
description = "MucOneUp: a tool to simulate MUC1 VNTR diploid references"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/your-username/muc_one_up"
license = "MIT"

[options]
packages = find:
python_requires = >=3.7
install_requires =
    orfipy>=0.0.3
    jsonschema>=3.2.0

[options.entry_points]
console_scripts =
    muconeup = muc_one_up.cli:main
